scripts/challenge-5/tripviewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  selector:
    app: tripviewer
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
