scripts/challenge-5/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: api
spec:
  selector:
    app: user
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
